# ShopBotBackEnd

./: README.md  debug.html  main.py  pcmodnepal.html  pyproject.toml  qualitycomputer_response.html
app/: database.py  hybrid_http_client.py  main.py  make_request.py  schema.py
app/core/: models.py  security.py  settings.py
app/routers/: auth.py  profile.py  search.py  status.py
app/schemas/: database_schema.py  models.py
app/services/: hukut_scraper.py  pcmodnepal_scraper.py  qualitycomputer_scraper.py
app/workers/: hukut_scraper.py  pcmodnepal_scraper.py  product_cleaner.py  qualitycomputer_scraper.py  session_cleaner.py
