[project]
name = "shopbotbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "fastapi>=0.137.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]
