[project]
name = "shopbotbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.3",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "seleniumbase>=4.50.1",
    "uvicorn[standard]>=0.49.0",
]
